# autofill-core-rs

./: Cargo.toml
src/: lib.rs
src/core/: mod.rs
src/core/action/: click.rs  mod.rs  wait.rs
src/core/instruction/: mod.rs
