[package]
name = "autofill-core-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["action", "instructions"]
action = []
instructions = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.74"
chromiumoxide = "0.5.4"
futures = "0.3.28"
lazy-regex = "3.0.2"
regex = "1.10.2"
serde = "1.0.189"
